; ModuleID = '/home/carl/AnghaBench/freebsd/sys/kern/extr_kern_rwlock.c_lock_rw.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/kern/extr_kern_rwlock.c_lock_rw.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lock_object = type { i32 }
%struct.rwlock = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @lock_rw(%struct.lock_object* %0, i64 %1) #0 {
  %3 = alloca %struct.lock_object*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.rwlock*, align 8
  store %struct.lock_object* %0, %struct.lock_object** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load %struct.lock_object*, %struct.lock_object** %3, align 8
  %7 = bitcast %struct.lock_object* %6 to %struct.rwlock*
  store %struct.rwlock* %7, %struct.rwlock** %5, align 8
  %8 = load i64, i64* %4, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %13

10:                                               ; preds = %2
  %11 = load %struct.rwlock*, %struct.rwlock** %5, align 8
  %12 = call i32 @rw_rlock(%struct.rwlock* %11)
  br label %16

13:                                               ; preds = %2
  %14 = load %struct.rwlock*, %struct.rwlock** %5, align 8
  %15 = call i32 @rw_wlock(%struct.rwlock* %14)
  br label %16

16:                                               ; preds = %13, %10
  ret void
}

declare dso_local i32 @rw_rlock(%struct.rwlock*) #1

declare dso_local i32 @rw_wlock(%struct.rwlock*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
